k8s/kube-system/traefik/canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: old-nginx
spec:
  ports:
  - port: 80
  selector:
    app: old-nginx

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: old-nginx
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: old-nginx
  template:
    metadata:
      labels:
        app: old-nginx
    spec:
      nodeSelector:
        kubernetes.io/hostname: node231
      containers:
      - image: nginx:alpine
        name: old-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: site
      volumes:
      - name: site
        hostPath:
          path: /root/k8s-manager/demo/canary/old.html

---
apiVersion: v1
kind: Service
metadata:
  name: new-nginx
spec:
  ports:
  - port: 80
  selector:
    app: new-nginx

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: new-nginx
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: new-nginx
  template:
    metadata:
      labels:
        app: new-nginx
    spec:
      nodeSelector:
        kubernetes.io/hostname: node231
      containers:
      - image: nginx:alpine
        name: new-nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: site
      volumes:
      - name: site
        hostPath:
          path: /root/k8s-manager/demo/canary/new.html
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-canary
  annotations:
    # 通过权重，控制流量
    traefik.ingress.kubernetes.io/service-weights: |
     new-nginx: 10%
     old-nginx: 90%
spec:
  rules:
  - host: canary.local
    http:
      paths:
      # 老版本服务
      - path: /
        backend:
          serviceName: old-nginx
          servicePort: 80
      # 新版本服务
      - path: /
        backend:
          serviceName: new-nginx
          servicePort: 80
